--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "starter",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://aydjay12.github.io/My_Portfolio/",
+  "homepage": "https://aydjay12.github.io/My_Portfolio",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
